[metadata]
name = plover-treal
version = 1.0.1
description = Tréal support for Plover
long_description = file: README.rst
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/morinted/plover_treal
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
python_requires = >=3.6
zip_safe = True
install_requires =
	plover>=4.0.0.dev0
	hidapi
py_modules =
	plover_treal

[options.entry_points]
plover.machine =
	Treal = plover_treal:Treal

# vim: commentstring=#\ %s list
